--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <div class="div">
       <h2>TRANSFERENCE => VESSEL 0.99b</h2>
       <textarea id="sequence" readonly></textarea>
+      <h2 id="seek">SEEK: A(16) F(13) J(18)</h2>
       <textarea id="current" readonly></textarea>
       <textarea id="string" readonly></textarea>
+      <h2 class="corruption">CORRUPTION ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| 0%</h2>
     </div>
-    <div class="noise"></div>
     <script src="logic.js" async defer></script>
   </body>
 </html>
